--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 # Dependencias principales
-langchain>=0.1.0
-langchain-mcp>=0.1.0
+groq>=0.0.2
 python-dotenv>=1.0.0
+loguru>=0.7.2
 
-# Herramientas de desarrollo
-black>=23.0.0
-mypy>=1.0.0
-pytest>=7.0.0
+# Desarrollo
+pytest>=8.0.0
+pytest-cov>=4.1.0
+black>=24.0.0
+isort>=5.13.0
+flake8>=6.1.0
+mypy>=1.8.0
 
 # Documentación
-mkdocs>=1.0.0
-mkdocs-material>=9.0.0
+mkdocs>=1.5.3
+mkdocs-material>=9.5.0
