--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-# Dependencias principales
+c # Dependencias principales
 groq>=0.0.2
 python-dotenv>=1.0.0
 loguru>=0.7.2
+faiss-cpu>=1.7.4
+numpy>=1.24.0
+sentence-transformers>=2.2.2
 
 # Desarrollo
 pytest>=8.0.0
