--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, local-dev ]
   pull_request:
     branches: [ main ]
 
@@ -10,10 +10,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     
@@ -21,40 +21,29 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
-    - name: Run tests
+    
+    - name: Run linting
       run: |
-        pytest --cov=src --cov-report=xml
-        
-    - name: Upload coverage
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
-        
-    - name: Run linters
+        pip install black flake8
+        black . --check
+        flake8 .
+    
+    - name: Run basic tests
       run: |
-        black --check src tests
-        isort --check-only src tests
-        flake8 src tests
-        mypy src
-        
+        pip install pytest
+        pytest tests/ -v -k "not test_groq_integration and not test_environment"
+
   docs:
     runs-on: ubuntu-latest
-    needs: test
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
     - name: Build documentation
       run: |
-        mkdocs build
+        pip install mkdocs mkdocs-material
+        mkdocs build --strict
